Converted to Kotlin
Converted InventoryUtils to Kotlin

--- a/src/main/resources/liquidcat_at.cfg
+++ b/src/main/resources/liquidcat_at.cfg
@@ -82,3 +82,6 @@ public net.minecraft.network.play.server.S08PacketPlayerPosLook field_148937_e #
 public net.minecraft.network.play.server.S12PacketEntityVelocity field_149415_b # motionX
 public net.minecraft.network.play.server.S12PacketEntityVelocity field_149416_c # motionY
 public net.minecraft.network.play.server.S12PacketEntityVelocity field_149414_d # motionZ
+
+# Item
+public net.minecraft.item.Item field_77777_bU # maxStackSize
