--- a/src/main/resources/liquidcat_at.cfg
+++ b/src/main/resources/liquidcat_at.cfg
@@ -83,5 +83,8 @@ public net.minecraft.network.play.server.S12PacketEntityVelocity field_149415_b 
 public net.minecraft.network.play.server.S12PacketEntityVelocity field_149416_c # motionY
 public net.minecraft.network.play.server.S12PacketEntityVelocity field_149414_d # motionZ
 
+# C19PacketResourcePackStatus
+public net.minecraft.network.play.client.C19PacketResourcePackStatus field_179719_b # status
+
 # Item
 public net.minecraft.item.Item field_77777_bU # maxStackSize
