--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
 # Project
 project_name = LiquidCat
 project_version = 1.0
-maven_group=lol.liquidcat
-archives_base_name=liquidcat
+maven_group = lol.liquidcat
+archives_base_name = liquidcat
 
 # Kotlin
-kotlin.code.style=official
+kotlin.code.style = official
 kotlin_version = 1.6.21
 detekt_version = 1.19.0
 
@@ -14,4 +14,4 @@ forgegradle_version = ddb1eb0
 mixingradle_version = ae2a80e
 
 # Other
-org.gradle.jvmargs=-Xmx4g
+org.gradle.jvmargs = -Xmx4g
